[gd_scene load_steps=15 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://BGCellManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://BGParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://PowerSwitcher.tscn" type="PackedScene" id=4]
[ext_resource path="res://vignette.tscn" type="PackedScene" id=5]
[ext_resource path="res://displacement.jpg" type="Texture" id=6]
[ext_resource path="res://square.png" type="Texture" id=7]
[ext_resource path="res://title.png" type="Texture" id=8]

[sub_resource type="Shader" id=1]

code = "shader_type canvas_item;
render_mode unshaded;

uniform sampler2D displace : hint_albedo;
uniform float dispAmtX : hint_range(0,0.1);
uniform float dispAmtY : hint_range(0,0.1);
uniform float abberationAmt : hint_range(0,0.1);
uniform float dispSize : hint_range(0.1,2.0);

void fragment()
{
	// displace effect
	vec4 disp = texture(displace, SCREEN_UV * dispSize);
	vec2 newUV;
	//vec2 newUV = SCREEN_UV + disp.x * dispAmtX;
	newUV.x = SCREEN_UV.x + disp.x * dispAmtX;
	newUV.y = SCREEN_UV.y + disp.y * dispAmtY;

	COLOR.r = texture(SCREEN_TEXTURE, newUV - dispAmtX*0.5).r;
	COLOR.g = texture(SCREEN_TEXTURE, newUV).g;
	COLOR.b = texture(SCREEN_TEXTURE, newUV).b;
	COLOR.a = texture(SCREEN_TEXTURE, newUV).a;
}"
_sections_unfolded = [ "Resource" ]

[sub_resource type="ShaderMaterial" id=2]

render_priority = 0
shader = SubResource( 1 )
shader_param/dispAmtX = 0.006
shader_param/dispAmtY = 0.0
shader_param/abberationAmt = 0.002
shader_param/dispSize = 0.105
shader_param/displace = ExtResource( 6 )
_sections_unfolded = [ "shader_param" ]

[sub_resource type="Shader" id=3]

code = ""

[sub_resource type="ShaderMaterial" id=4]

render_priority = 0
shader = SubResource( 3 )

[sub_resource type="Curve" id=5]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 1.4, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]

flags = 4
width = 2048
curve = SubResource( 5 )

[node name="MainMenu" type="Node"]

script = ExtResource( 1 )

[node name="BGCellManager" parent="." index="0" instance=ExtResource( 2 )]

[node name="BGParticles" parent="." index="1" instance=ExtResource( 3 )]

[node name="PowerSwitcher" parent="." index="2" instance=ExtResource( 4 )]

[node name="testbase" type="Control" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_edit_lock_": true
}

[node name="vignette" parent="testbase" index="0" instance=ExtResource( 5 )]

[node name="displace" type="ColorRect" parent="testbase" index="1"]

visible = false
material = SubResource( 2 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 760.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Material", "Rect", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonNewGame" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 43.0
margin_top = 446.0
margin_right = 125.0
margin_bottom = 466.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New Game"
flat = false
align = 1
_sections_unfolded = [ "Focus", "Rect" ]

[node name="ButtonQuit" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 43.0
margin_top = 511.0
margin_right = 125.0
margin_bottom = 531.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Sprite" type="Sprite" parent="." index="6"]

modulate = Color( 0.197754, 0.667591, 0.703125, 1 )
material = SubResource( 4 )
position = Vector2( 385.87, 285.819 )
scale = Vector2( 7.02922, 5.46592 )
z_index = -1
texture = ExtResource( 7 )
normal_map = SubResource( 6 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="TitleSprite" type="Sprite" parent="." index="7"]

position = Vector2( 390.421, 71.2088 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Offset" ]


